k8s/alertmanager-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: alertmanager-ingress
  namespace: monitoring
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  ingressClassName: nginx
  rules:
  - host: pfe-adactim.eastus.cloudapp.azure.com
    http:
      paths:
      - path: /alertmanager/?(.*)
        pathType: Prefix
        backend:
          service:
            name: kube-prometheus-stack-alertmanager
            port:
              name: http-web
  tls:
  - hosts:
    - pfe-adactim.eastus.cloudapp.azure.com
    secretName: tls-secret
