k8s/net-policy-db.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: test-network-policy
  namespace: default
spec:
  podSelector:
    matchLabels:
      type: db
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
  #      - ipBlock:
   #         cidr: 172.17.0.0/16
    #        except:
     #         - 172.17.1.0/24
        - namespaceSelector:
            matchLabels:
              app: pfe-gitops-demo
        - podSelector:
            matchLabels:
              type: app
      ports:
        - protocol: TCP
          port: 3306
  egress:
    - to:
 #     - ipBlock:
 #           cidr: 10.0.0.0/24
      - ports:
        - protocol: TCP
          port: 3306
      - namespaceSelector:
          matchLabels:
            app: pfe-gitops-demo
      - podSelector:
          matchLabels:
            type: app
